# share_expenses_tg_bot_v2

./: .gitignore  Dockerfile  db.sqlite3  docker-compose.yml  main.py  pyproject.toml  requirements.txt  tg_bot.py
alembic/versions/: 2023_10_16_0036-3f3e3d59c855_database_creation.py
api_v1/: __init__.py
api_v1/telegram_user/: crud.py  dependencies.py  schemas.py  views.py
core/models/: __init__.py  base.py  db_helper.py  place.py  telegram_user.py  user.py
database/: model.py  pydantic_model.py
public/: index.html
public/css/: style.css
public/js/: script.js
